examples/test/testpolicy5075.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5075
  namespace: namespace324
spec:
  podSelector:
    matchLabels:
      key36: value7
      key1: value9
      key41: value34
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key9: value6
      podSelector:
        matchLabels:
          key42: value30
          key12: value5
          key27: value42
